--- a/index.html/style.css
+++ b/index.html/style.css
@@ -13,10 +13,10 @@
 }
 
 body {
-    font-family: "Inter", sans-serif; 
+    font-family: "Inter", sans-serif;
     color: #303030;
-    min-width: 768px;
-    /* 📍 Минимальная ширина */ 
+    min-width: 375px;
+    /* 📍 Минимальная ширина */
 }
 
 header {
@@ -41,6 +41,7 @@ header span {
 .main-section .wrapper {
     display: flex;
     align-items: center;
+    gap: 40px;
 }
 
 .text-wrapper {
@@ -59,7 +60,7 @@ header span {
 }
 
 .main-image {
-    max-width: 715px;
+    max-width: 100%;
 }
 
 .about-section {
@@ -70,7 +71,7 @@ header span {
 .about-section .wrapper {
     display: flex;
     flex-direction: column;
-    gap: 60px;
+    gap: 50px;
 }
 
 select {
@@ -80,7 +81,7 @@ select {
     padding: 8px 12px;
     font-weight: 400;
     font-size: 16px;
-    appearance: none; 
+    appearance: none;
     background-image: url("./assets/images/ep_arrow-down-2.svg");
     background-repeat: no-repeat;
     background-position: right 12px top 50%;
@@ -94,6 +95,7 @@ select:hover,
 .info-wrapper {
     display: flex;
     flex-wrap: wrap;
+    gap: 50px;
 }
 
 .section-title {
@@ -238,7 +240,7 @@ footer {
 
     .about-section {
         flex-wrap: wrap;
-        padding: 60px 20px;
+        padding: 60px 0px;
         flex-direction: column;
     /* 📍 Внутренний отступ сверху и снизу */
     }
@@ -246,7 +248,7 @@ footer {
 
 @media screen and (max-width: 768px) {
     .info-wrapper {
-        margin: 0 60px ;
+        gap: 60px;
 
         /* 📍 Свойства для расположения 2-x списков и отступа между ними */
     }
@@ -272,7 +274,7 @@ footer {
 
     .about-section .wrapper,
     .info-wrapper {
-        margin-bottom: 50px;
+        margin-bottom: 60px;
         /* 📍 Отступ между изображением и блоком с текстом */
     }
 }
