--- a/index.html/style.css
+++ b/index.html/style.css
@@ -225,11 +225,12 @@ footer {
     .main-section .wrapper {
         flex-direction: column;
         margin: 0 60px;
+        align-items: center;
         /* 📍 Свойства для расположения элементов и отступа между ними */
     }
 
     .main-image {
-        max-width: 718px;
+        max-width: 100%;
         /* 📍 Максимальная ширина для главного изображения в % */
     }
 
@@ -263,7 +264,7 @@ footer {
     }
 
     .main-section .wrapper {
-        margin-bottom: 40px;
+        gap: 60px;
         /* 📍 Отступ между изображением и блоком с текстом */
     }
 
@@ -274,7 +275,7 @@ footer {
 
     .about-section .wrapper,
     .info-wrapper {
-        margin-bottom: 60px;
+        gap: 50px;
         /* 📍 Отступ между изображением и блоком с текстом */
     }
 }
