--- a/index.html/style.css
+++ b/index.html/style.css
@@ -265,7 +265,7 @@ footer {
 
     .main-section .wrapper {
         gap: 60px;
-        /* 📍 Отступ между изображением и блоком с текстом */
+        /* 📍 Отступ между изображением и блоком с текстм */
     }
 
     .main-title {
