--- a/index.html/style.css
+++ b/index.html/style.css
@@ -41,7 +41,7 @@ header span {
 .main-section .wrapper {
     display: flex;
     align-items: center;
-    gap: 40px;
+    gap: 60px;
 }
 
 .text-wrapper {
@@ -264,8 +264,8 @@ footer {
     }
 
     .main-section .wrapper {
-        gap: 60px;
-        /* 📍 Отступ между изображением и блоком с текстм */
+        gap: 40px;
+        /* 📍 Отступ между изображением и блоком с текстом */
     }
 
     .main-title {
